[package]
name = "generate_tutorial_repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
duct = "0.13"
git2 = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
walkdir = "2.3"
